# mytechladder

./: .gitignore  justfile
backend/: pyproject.toml
backend/backend/: authentication.py  config.py  database.db  main.py  sql_engine.py
backend/backend/account/: controllers.py  model.py
nginx/: Dockerfile  docker-compose.yml  nginx.conf
nginx/content/: index.html  package-lock.json
nginx/content/MyTechLadder/: README.md  package-lock.json  package.json
nginx/content/MyTechLadder/src/: App.vue  main.ts  types.ts
nginx/content/MyTechLadder/src/components/: LoginForm.vue  SignupForm.vue
nginx/content/MyTechLadder/src/services/: api.ts  index.ts  types.ts
nginx/content/MyTechLadder/src/views/: HomePage.vue  HomePageView.vue  LoginView.vue
