[project]
name = "backend"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Emmanuel Guefif",email = "eguefif@fastmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
